<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="weather_banner_image">weather banner image</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">humidity</string>
    <string name="sea_level">Sea level</string>
    <string name="reload">Reload</string>
    <string name="now">Now</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
</resources>