<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/data_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <kz.zhandos.lib.coreui.viewgroup.WeatherBanner
            android:id="@+id/weather_banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/first_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_banner">

            <kz.zhandos.lib.coreui.viewgroup.SmallInfoCard
                android:id="@+id/wind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:title="@string/wind_speed" />

            <View
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <kz.zhandos.lib.coreui.viewgroup.SmallInfoCard
                android:id="@+id/pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_pressure"
                app:title="@string/pressure" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_info">

            <kz.zhandos.lib.coreui.viewgroup.SmallInfoCard
                android:id="@+id/humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_himidity"
                app:title="@string/humidity" />

            <View
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <kz.zhandos.lib.coreui.viewgroup.SmallInfoCard
                android:id="@+id/sea_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:title="@string/sea_level" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_info">

            <kz.zhandos.lib.coreui.viewgroup.SmallInfoCard
                android:id="@+id/sunset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_sunny"
                app:title="@string/sunset" />

            <View
                android:layout_width="16dp"
                android:layout_height="0dp" />

            <kz.zhandos.lib.coreui.viewgroup.SmallInfoCard
                android:id="@+id/sunrise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_sunny"
                app:title="@string/sunrise" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/show_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loading_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reload_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reload"
        android:visibility="gone" />

</FrameLayout>


